# operator-jack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  SPEC_FREEZE_V0.1.md  SPEC_FREEZE_V0.2.md  SPEC_FREEZE_V0.3.md  SPEC_FREEZE_V0.4.md  SPEC_FREEZE_V0.6.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/operator-cli/: Cargo.toml
crates/operator-cli/src/: main.rs
crates/operator-core/: Cargo.toml
crates/operator-core/src/: config.rs  error.rs  event.rs  interpolation.rs  lib.rs  policy.rs  redaction.rs  selector.rs  types.rs  validation.rs
crates/operator-exec-browser/: Cargo.toml
crates/operator-exec-browser/src/: cdp.rs  client.rs  error.rs  executor.rs  lib.rs
crates/operator-exec-system/: Cargo.toml
crates/operator-exec-system/src/: executor.rs
crates/operator-ipc/: Cargo.toml
crates/operator-ipc/src/: client.rs  error.rs  framing.rs  lib.rs  protocol.rs
crates/operator-planner/: Cargo.toml
crates/operator-planner/src/: anthropic.rs  error.rs  kimi.rs  lib.rs  ollama.rs  openai.rs  planner.rs  prompt.rs  provider.rs
crates/operator-runtime/: Cargo.toml
crates/operator-runtime/src/: engine.rs  error.rs  lib.rs  logging.rs  policy.rs
crates/operator-skills/: Cargo.toml
crates/operator-skills/src/: error.rs  lib.rs  manifest.rs  registry.rs
crates/operator-store/: Cargo.toml
crates/operator-store/src/: error.rs  lib.rs  migrations.rs  repo.rs
docs/: ARCHITECTURE.md  PERMISSIONS_MACOS.md  ROADMAP.md  SECURITY.md  SELECTORS.md
docs/examples/: browser-navigate.json  calculator-buttons.json  chrome-search.json  disambiguation-test.json  element-ref-reuse.json  file-operations.json  full-end-to-end.json  multi-window.json  notes-automation.json  notes-create-m3.json  open-app.json  select-menu-test.json  system-settings-nav.json
homebrew/: operator-jack.rb
macos-helper/: Package.swift
macos-helper/Sources/OperatorMacOSHelper/: AXUtilities.swift  IpcProtocol.swift  MethodDispatcher.swift  main.swift
macos-helper/Sources/OperatorMacOSHelper/Methods/: CheckAccessibility.swift  Click.swift  Find.swift  FocusApp.swift  FocusWindow.swift  Inspect.swift  KeyPress.swift  ListApps.swift  ListWindows.swift  Ping.swift  ReadText.swift  SelectMenu.swift  SetValue.swift  TypeText.swift  WaitFor.swift
skills/: create-note.yaml  open-and-type.yaml  take-screenshot.yaml
