[workspace]
resolver = "2"
members = [
    "crates/operator-core",
    "crates/operator-store",
    "crates/operator-runtime",
    "crates/operator-exec-system",
    "crates/operator-ipc",
    "crates/operator-cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
tracing = "0.1"
regex = "1"
